--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,49 @@
 /* ----Fonts---- */
 
-/* rubik-300 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 300;
-  src: url("../fonts/rubik-v28-latin-300.woff2") format("woff2"),
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-      url("../fonts/rubik-v28-latin-300.woff") format("woff");
-}
-
-/* rubik-regular - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Rubik";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/rubik-v28-latin-regular.woff2") format("woff2"),
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-      url("../fonts/rubik-v28-latin-regular.woff") format("woff");
-}
-
-/* rubik-500 - latin */
+/* inter-300 - cyrillic_latin */
 @font-face {
   font-display: swap;
-  font-family: "Rubik";
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/inter-v13-cyrillic_latin-300.woff2") format("woff2"),
+    url("../fonts/inter-v13-cyrillic_latin-300.woff") format("woff");
+}
+/* inter-regular - cyrillic_latin */
+@font-face {
+  font-display: swap;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/inter-v13-cyrillic_latin-regular.woff2") format("woff2"),
+    url("../fonts/inter-v13-cyrillic_latin-regular.woff") format("woff");
+}
+/* inter-500 - cyrillic_latin */
+@font-face {
+  font-display: swap;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/rubik-v28-latin-500.woff2") format("woff2"),
-    url("../fonts/rubik-v28-latin-500.woff") format("woff");
+  src: url("../fonts/inter-v13-cyrillic_latin-500.woff2") format("woff2"),
+    url("../fonts/inter-v13-cyrillic_latin-500.woff") format("woff");
+}
+/* inter-700 - cyrillic_latin */
+@font-face {
+  font-display: swap;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/inter-v13-cyrillic_latin-700.woff2") format("woff2"),
+    url("../fonts/inter-v13-cyrillic_latin-700.woff") format("woff");
 }
 
-/* merriweather-900 - latin */
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "Merriweather";
+  font-display: swap;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 900;
-  src: url("../fonts/merriweather-v30-latin-900.woff2") format("woff2"),
-    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-      url("../fonts/merriweather-v30-latin-900.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+, iOS 5+ */
+  src: url("../fonts/inter-v13-cyrillic_latin-900.woff2") format("woff2"),
+    url("../fonts/inter-v13-cyrillic_latin-900.woff") format("woff");
 }
 
 :root {
@@ -71,6 +74,7 @@ body {
 }
 
 a {
+  display: inline-block;
   color: inherit;
   text-decoration: none;
 }
@@ -134,7 +138,7 @@ body {
 
 /* ----Modul title---- */
 .title {
-  font-family: "Merriweather";
+  font-family: "Inter", sans-serif;
   color: var(--greys-white, #fff);
   font-size: 1.875rem; /* стиль основного тексту, який ми взяли для визначення ширини обмеджуючого контейнера*/
   line-height: 130%;
@@ -182,7 +186,7 @@ body {
   left: 0;
   background-color: rgb(30 63 27 / 70%);
   opacity: 0;
-  transition: opacity 0.3s;
+  transition: opacity 0.5s;
 }
 .header.scroll::before {
   opacity: 1;
@@ -196,7 +200,7 @@ body {
   align-items: center;
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  min-height: 6.5625rem;
+  min-height: 5rem;
 }
 .header__logo {
   overflow: hidden; /* при стисканні сторінки елементи меню наїдуть на логотип, залишая видимим тільки хатинку */
@@ -234,7 +238,7 @@ body {
   column-gap: 2.5rem; /* проміжок між пунктами горизонтально */
   row-gap: 0.625rem; /* проміжок між пунктами вертикально */
   color: var(--greys-white);
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   font-weight: 500;
 }
 
@@ -262,7 +266,7 @@ body {
   }
   /* використовуємо em */
   .header__logo {
-    flex: 0 0 2.0625rem;
+    flex: 0 0 3.5rem;
   }
 }
 
@@ -538,12 +542,12 @@ body {
 .info__item {
 }
 .info__title {
-  font-family: "Merriweather";
+  font-family: "Inter", sans-serif;
   color: var(--color-dark-green);
   font-size: 1.125rem;
 }
 .info__title:not(:last-child) {
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.75rem;
 }
 .info__text {
   font-size: 0.75rem;
@@ -597,7 +601,7 @@ body {
   }
 }
 .footer__mail {
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   font-weight: 500;
 }
 .footer__mail:hover {
@@ -617,7 +621,7 @@ body {
 .menu__foote__item {
 }
 .menu-footer__link {
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   font-weight: 500;
 }
 .menu-footer__link:hover {
